--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,37 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>Pylonpanel</title>
-  <base href="/">
+  <meta name="mobile-web-app-capable" content="yes">
+  <title>Pylon Panel</title>
+  <base href="/"> {{#unless environment.production}}
+  <script src="/ember-cli-live-reload.js" type="text/javascript"></script> {{/unless}}
+  <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.1/semantic.min.css">
+  <link type="text/css" rel="stylesheet" href="/styles.css">
 
-  {{#unless environment.production}}
-  <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
-  {{/unless}}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.1/semantic.min.js"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root>Loading...</app-root>
-  
-    {{#each scripts.polyfills}}
-    <script src="{{.}}"></script>
-    {{/each}}
-    <script>
+  <app-root>
+    <div class="ui active inverted dimmer">
+      <div class="ui text large loader">Loading...</div>
+    </div>
+  </app-root>
+
+  {{#each scripts.polyfills}}
+  <script src="{{.}}"></script> {{/each}}
+  <script>
       System.import('system-config.js').then(function () {
         System.import('main');
       }).catch(console.error.bind(console));
     </script>
-  
+
 </body>
+
 </html>
